# RepoLens

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  librarian  package.json  pyproject.toml  setup.py  test_providers.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo_project/: Startup.cs
demo_project/Controllers/: AuthController.cs  OrdersController.cs
demo_project/Middleware/: RequestLoggingMiddleware.cs
demo_project/Services/: AuthenticationService.cs  OrderService.cs
docs/: MODEL_CONFIGURATION.md  POPULAR_MODELS.md
src/: main.py
src/cli/: manage.py  runner.py  services.py  workspace.py
src/librarian/: __init__.py  architect.py  cache.py  consts.py  db.py  embeddings.py  server.py  watcher.py
src/librarian/chunking/: __init__.py  base.py  csharp.py  factory.py
src/librarian/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
test_csharp/: ProductController.cs  UserController.cs
