[project]
name = "codebase-librarian"
version = "0.3.0"
description = "Local-first semantic code search using Ollama and LanceDB"
requires-python = ">=3.10"
dependencies = [
    "lancedb>=0.5.0",
    "ollama>=0.1.0",
    "mcp>=1.0.0",
    "watchdog>=4.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.0"
]

[project.scripts]
librarian = "src.main:app"
