[project]
name = "codebase-librarian"
version = "0.4.0"
description = "Flexible semantic code search with support for local and cloud AI models"
requires-python = ">=3.10"
dependencies = [
    "lancedb>=0.5.0",
    "ollama>=0.1.0",
    "mcp>=1.0.0",
    "watchdog>=4.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = ["openai>=1.0.0", "anthropic>=0.18.0"]

[project.scripts]
librarian = "src.main:app"
